Sass: Fix overflow properties for `tooltip` compatibility.

--- a/src/app/raisecard/raisecard.component.sass
+++ b/src/app/raisecard/raisecard.component.sass
@@ -16,7 +16,7 @@
     color: $anti-accent-color-hex
     background-color: $accent-color-hex
     border: none
-    overflow: hidden
+    overflow: visible
 
     & > .marker
       position: absolute
