--- a/src/app/showcase/showcase.component.sass
+++ b/src/app/showcase/showcase.component.sass
@@ -12,12 +12,10 @@
     text-transform: none
     flex-direction: column
     justify-content: space-evenly
+    overflow: hidden
 
     & > *
       margin: 1em
-
-    & .card-entity
-      overflow: hidden
 
     & .card-internal
       display: flex
